--- a/style.css
+++ b/style.css
@@ -73,7 +73,19 @@ h2 {
   font-weight: 500;
   font-size: 36px;
   line-height: 48px;
+  margin-bottom: 16px;
   color: #091133;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  color: #091133;
+}
+
+p {
+  margin-bottom: 10px;
 }
 
 .logo {
@@ -156,7 +168,7 @@ hr {
   line-height: 66px;
   letter-spacing: 1px;
   color: #222F65;
-  margin-top: 35px;
+  margin-top: 25px;
 }
 .price-section .UI-design-kit {
   color: #37447E;
@@ -169,10 +181,33 @@ hr {
   margin-bottom: 9px;
 }
 
-.content-grid {
+.two-columns {
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
+  row-gap: 130px;
+  margin-bottom: 160px;
+}
+.two-columns button {
+  margin-top: 30px;
+}
+.two-columns img {
+  margin: 0 auto 0 auto;
+}
+.two-columns .small {
+  font-size: 12px;
+  line-height: 18px;
+  margin-bottom: 0;
+  margin-top: 70px;
+  column-gap: 30px;
+  color: #5D6970;
+}
+.two-columns .small img {
+  margin: 0;
+}
+
+.lesser-images img {
+  transform: scale(0.8, 0.8);
 }
 
 /*# sourceMappingURL=style.css.map */
