--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ button {
   background: #111B47;
   border-radius: 2px;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 24px;
   text-align: center;
   color: #FFFFFF;
   border: 0;
@@ -31,12 +31,26 @@ button {
   width: 189px;
 }
 .top-panel button {
+  font-size: 12px;
+  line-height: 18px;
   height: 26px;
   width: 160px;
 }
 
 .footer .top-panel button {
   width: 109px;
+}
+
+.button-flex button {
+  font-size: 16px;
+  line-height: 26px;
+}
+
+button.light {
+  background: none;
+  color: #091133;
+  border: 2px solid #091133;
+  border-radius: 2px;
 }
 
 * {
@@ -107,7 +121,7 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  margin: 10px 0 40px 0;
+  margin-bottom: 40px;
 }
 
 .left-flex {
@@ -136,7 +150,7 @@ p {
 .footer {
   background: #E7ECFF;
   padding-bottom: 40px;
-  padding-top: 40px;
+  padding-top: 50px;
 }
 
 hr {
@@ -208,6 +222,24 @@ hr {
 
 .lesser-images img {
   transform: scale(0.8, 0.8);
+}
+
+.introduction {
+  height: 1112px;
+  background-image: url("./assets/images/hero.jpg");
+  background-repeat: no-repeat;
+  background-position: right;
+  padding-top: 10px;
+  margin-bottom: 100px;
+}
+.introduction .two-columns {
+  margin-top: 210px;
+}
+.introduction .button-flex {
+  display: flex;
+  flex-direction: row;
+  margin-top: 60px;
+  gap: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
