--- a/style/scss/buttons.scss
+++ b/style/scss/buttons.scss
@@ -3,8 +3,8 @@ button {
     border-radius: 2px;
 
     font-weight: 500;
-    font-size: 12px;
-    line-height: 18px;
+    font-size: 14px;
+    line-height: 24px;
     text-align: center;
     color: #FFFFFF;
     border: 0;
@@ -17,11 +17,24 @@ button {
 
     @at-root {
         .top-panel #{&} {
+            font-size: 12px;
+            line-height: 18px;
             height: 26px;
             width: 160px;
         }
         .footer .top-panel #{&} {
             width: 109px;
         }
+        .button-flex #{&} {
+            font-size: 16px;
+            line-height: 26px;
+        }
+    }
+
+    &.light {
+        background: none;
+        color: #091133;
+        border: 2px solid #091133;
+        border-radius: 2px;
     }
 }
