--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -69,7 +69,7 @@ p {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
-    margin: 10px 0 40px 0;
+    margin-bottom: 40px;
 }
 
 .left-flex {
@@ -101,7 +101,7 @@ p {
 .footer {
     background: #E7ECFF;
     padding-bottom: 40px;
-    padding-top: 40px;
+    padding-top: 50px;
 }
 
 hr {
@@ -181,5 +181,25 @@ hr {
 .lesser-images {
     img {
         transform: scale(0.8, 0.8);
+    }
+}
+
+.introduction {
+    height: 1112px;
+    background-image: url("./assets/images/hero.jpg");
+    background-repeat: no-repeat;
+    background-position: right;
+    //background-attachment: fixed;
+    padding-top: 10px;
+    margin-bottom: 100px;
+
+    .two-columns {
+        margin-top: 210px;
+    }
+    .button-flex {
+        display: flex;
+        flex-direction: row;
+        margin-top: 60px;
+        gap: 30px;
     }
 }
