Button animations and links added

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -19,6 +19,11 @@ body {
     color: #6F7CB2;
 }
 
+a {
+    color: unset;
+    text-decoration: none;
+}
+
 .layout {
     padding: 0 165px 0 165px;
 }
