--- a/style.css
+++ b/style.css
@@ -25,10 +25,20 @@ button {
   text-align: center;
   color: #FFFFFF;
   border: 0;
+  transition: 0.75s;
+  transition-timing-function: ease-in;
   justify-content: center;
   align-items: center;
   height: 36px;
   width: 189px;
+}
+button:hover {
+  cursor: pointer;
+}
+button:active {
+  background: #505F98;
+  color: white;
+  transition: 0s;
 }
 .top-panel button {
   font-size: 12px;
@@ -52,6 +62,11 @@ button.light {
   border: 2px solid #091133;
   border-radius: 2px;
 }
+button.light:active {
+  background: #505F98;
+  color: white;
+  border-color: white;
+}
 
 * {
   margin: 0;
@@ -69,6 +84,11 @@ body {
   margin-left: auto;
   margin-right: auto;
   color: #6F7CB2;
+}
+
+a {
+  color: unset;
+  text-decoration: none;
 }
 
 .layout {
