--- a/style/scss/buttons.scss
+++ b/style/scss/buttons.scss
@@ -8,12 +8,24 @@ button {
     text-align: center;
     color: #FFFFFF;
     border: 0;
+    transition: 0.75s;
+    transition-timing-function: ease-in;
 
     justify-content: center;
     align-items: center;
 
     height: 36px;
     width: 189px;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:active {
+        background: #505F98;
+        color: white;
+        transition: 0s;
+    }
 
     @at-root {
         .top-panel #{&} {
@@ -36,5 +48,11 @@ button {
         color: #091133;
         border: 2px solid #091133;
         border-radius: 2px;
+
+        &:active {
+            background: #505F98;
+            color: white;
+            border-color: white;
+        }
     }
 }
