--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,5 +1,8 @@
 @import 'fonts.scss';
 @import 'buttons.scss';
+@import 'price-section.scss';
+@import 'introduction.scss';
+@import 'content-section.scss';
 
 * {
     margin: 0;
@@ -112,99 +115,4 @@ p {
 hr {
     color: #CDD1D4;
     margin: 0 0 20px 0;
-}
-
-.price-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    font-size: 16px;
-    line-height: 26px;
-    color: #6F7CB2;
-    padding-top: 240px;
-    padding-bottom: 170px;
-
-    background-image: url("./assets/images/Rectangle.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 110%;
-    background-position: 50% 10%;
-
-    p {
-        max-width: 600px;
-    }
-    .price {
-        font-weight: 500;
-        font-size: 50px;
-        line-height: 66px;
-        letter-spacing: 1px;
-        color: #222F65;
-        margin-top: 25px;
-    }
-    .UI-design-kit {
-        color: #37447E;
-        margin-bottom: 60px;
-    }
-    .see-one-price {
-        font-size: 14px;
-        line-height: 24px;
-        color: #5D6970;
-        margin-bottom: 9px;
-    }
-}
-
-.two-columns {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    //column-gap: 20px;
-    row-gap: 130px;
-    margin-bottom: 160px;
-
-    button {
-        margin-top: 30px;
-    }
-
-    img {
-        margin: 0 auto 0 auto;
-    }
-
-    .small {
-        font-size: 12px;
-        line-height: 18px;
-        margin-bottom: 0;
-        margin-top: 70px;
-        column-gap: 30px;
-        color: #5D6970;
-
-        img {
-            margin: 0;
-        }
-    }
-}
-
-.lesser-images {
-    img {
-        transform: scale(0.8, 0.8);
-    }
-}
-
-.introduction {
-    height: 1112px;
-    background-image: url("./assets/images/hero.jpg");
-    background-repeat: no-repeat;
-    background-position: right;
-    //background-attachment: fixed;
-    padding-top: 10px;
-    margin-bottom: 100px;
-
-    .two-columns {
-        margin-top: 210px;
-    }
-    .button-flex {
-        display: flex;
-        flex-direction: row;
-        margin-top: 60px;
-        gap: 30px;
-    }
 }
