--- a/style/scss/price-section.scss
+++ b/style/scss/price-section.scss
@@ -35,4 +35,10 @@
         color: #5D6970;
         margin-bottom: 9px;
     }
+    button {
+        margin-bottom: 170px;
+    }
+    h2 {
+        margin-top: 230px;
+    }
 }
